antonio_sanchez/session01/exercise02/wordpress-canary-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary-deployment
  namespace: exercise02
  labels:
    app: wordpress
    type: web
    tier: frontend
    track: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: web
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.5
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 11
