antonio_sanchez/session01/exercise02/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: exercise02
  labels:
    app: wordpress
    type: web
    tier: frontend
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - host: wordpress-exercise-02.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-wordpress
          servicePort: http-sv-port
